--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.opeious.pokemon3dstounity": "https://github.com/opeious/Pokemon3DStoUnity.git",
+    "com.unity.cinemachine": "2.6.3",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
@@ -38,7 +40,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.opeious.pokemon3dstounity": "https://github.com/opeious/Pokemon3DStoUnity.git"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
